--- a/installer/resources/themes/console/light/console.css
+++ b/installer/resources/themes/console/light/console.css
@@ -178,6 +178,12 @@ div.routersummary p {
      padding: 0;
 }     
 
+div.refresh {
+     margin-top: -6px !important;
+     margin-bottom: -8px !important;
+     padding: 2px 0 0px 0 !important;
+}
+
 div.routersummary a:link, div.routersummary a:visited {
      text-shadow: 0px 0px 1px rgba(0, 0, 32, 0.5);
 }
