--- a/installer/resources/themes/console/dark/console.css
+++ b/installer/resources/themes/console/dark/console.css
@@ -318,6 +318,7 @@ div.news h4 {
      margin: 5px 0 10px 0;
      font-size: 10pt;
      opacity: 0.8;
+     text-transform: capitalize;
 }
 
 div.news p {
@@ -523,6 +524,14 @@ div.main li {
      text-align: justify !important;
 }
 
+.tidylist:first-child {
+     padding-top: 5px;
+}
+
+.tidylist:last-child {
+     padding-bottom: 5px;
+}
+
 ol {
      display: inline;
      margin: 1px 0 0 0;
@@ -530,7 +539,7 @@ ol {
 }
 
 ul {
-     display: inline;
+/*     display: inline; */
      margin: 0;
      padding: 0;
 }
@@ -564,6 +573,8 @@ a:hover{
 .links {
      padding-bottom: -2px;
      text-align: justify;
+     margin-top: 10px;
+     margin-bottom: -10px;
 }
 
 .links li {
@@ -633,7 +644,7 @@ h3 {
      border: 1px solid #99f;
      border-left: 5px solid #99f;
      padding: 3px 5px 3px 5px;
-     margin: 12px 0 12px 0;
+     margin: 12px 0 10px 0;
      border-radius: 0 4px 4px 0;
      -moz-border-radius: 0 4px 4px 0;
      -khtml-border-radius: 0 4px 4px 0;
