--- a/installer/resources/themes/console/light/console.css
+++ b/installer/resources/themes/console/light/console.css
@@ -288,16 +288,22 @@ div.main textarea {
 
 div.news {
      margin: 0px 15px 10px 220px;
-     padding: 10px 25px 15px 25px;
+     padding: 10px 25px 7px 25px;
      border: 1px solid #003;
      color: #410;
      border-radius: 4px;
      -moz-border-radius: 4px;
      -khtml-border-radius: 4px;
-     text-align: justify !important;
+     text-align: right !important;
+     font-size: 7pt;
      line-height: 140%;
      background: #fea url('images/sandtile.png');
      -moz-box-shadow: inset 0px 0px 1px 0px #410;
+}
+
+div.news p {
+     font-size: 8.5pt;
+     text-align: justify !important;
 }
 
 div.news a:link{
@@ -323,13 +329,13 @@ div.news hr{
      background: #410;
      height: 1px;
      border: 0px solid #410;
-     margin: 10px 0;
+     margin: 10px 0 5px;
 }
 
 div.news li {
      text-align: justify;
      list-style: none;
-     margin: 0 0 20px 0 !important;
+     margin: 10px 0 20px 0 !important;
      padding: 5px 0;
      vertical-align: bottom;
      border: 1px solid #410;
@@ -340,7 +346,7 @@ div.news li {
      -khtml-border-radius: 0 4px 4px 0;
      background: #fb1;
      font-size: 10pt;
-     opacity: 0.8;
+     opacity: 0.7;
 }
 
 div.news h4 {
@@ -528,8 +534,19 @@ div.main li {
      word-wrap: break-word;
 }
 
+div.main li:first-child {
+     margin-top: 10px;
+}
 .tidylist {
      text-align: justify !important;
+}
+
+.tidylist li:first-child {
+     margin-top: -10px !important;
+}
+
+.tidylist:last-child {
+     padding-bottom: 5px;
 }
 
 ol {
@@ -540,7 +557,7 @@ ol {
 
 ul {
      display: inline;
-     margin: 5px 0;
+     margin: 0;
      padding: 0;
 }
 
@@ -574,10 +591,22 @@ a:active{
      font-weight: bold;
 }
 
-.links {
-     list-style: url(images/link.png);
+.links li {
+     list-style: url(../images/link.png) !important;
      padding-bottom: -2px;
      text-align: justify;
+}
+
+.links li:first-child {
+     padding-top: 0 !important;
+}
+
+.links li:last-child {
+     padding-bottom: -15px !important;
+}
+
+.links ul {
+     margin-top: -5px !important;
 }
 
 p {
