UI layout cleanups and finessing.
Monotone-Parent: 3b7eea2e546b5ddcebdb5d2ae7cccfa88391794f
Monotone-Revision: 4cf77c9e1533ff7c4920a9d18ace7575a99d0bbc

Monotone-Author: z3d@mail.i2p
Monotone-Date: 2009-10-22T11:33:02
Monotone-Branch: i2p.i2p

--- a/installer/resources/themes/console/dark/console.css
+++ b/installer/resources/themes/console/dark/console.css
@@ -213,7 +213,7 @@ div.tunnels {
 }
 
 div.tunnels table {
-     margin-top: -3px !important;
+     margin: -3px 0 !important;
 }
 
 div.tunnels td {
