Classic theme override for Chinese and other "big" charactersets (sidepanel).
Monotone-Parent: e14fbe535deef3e6b734ad65bfb4ea32b58b85fe
Monotone-Revision: 7cc02380b78834561682c12694f0b61ea24b54c4

Monotone-Author: z3d@mail.i2p
Monotone-Date: 2009-10-27T12:31:24
Monotone-Branch: i2p.i2p

--- a/installer/resources/themes/console/classic/console_big.css
+++ b/installer/resources/themes/console/classic/console_big.css
@@ -1,135 +1,6 @@
-/* Optimised for less capable browsers and system specifications */
+/* Classic Theme: Larger fontsize override for sidepanel to accomodate foreign charactersets */
 
-body {
-     margin: 2px 0 0 2px;
-     padding: 0;
-     text-align: left;
-     background: #bbf;
-     color: #000;
-     font: 9pt/140%  Verdana, Tahoma, Helvetica, sans-serif;
-}
-
-.hide {
-     display: none;
-}
-
-img {
-     border: none;
-}
-
-pre {
-     overflow: auto;
-     font-size: 8pt !important;
-     width: 95%;
-     padding-top: 10px;
-}
-
-div.logo {
-     float: left;
-     position-relative: top 20px ;
-     width: 200px;
-     margin: 0 0 0 20px;
-     padding: 10px 5px;
-     text-align: center;
-     border: 5px solid #ddf;
-     background-color: #eef;
-     -moz-border-radius: 15px;
-     -moz-box-shadow: inset 0px 0px 0px 2px #99f;
-     -khtml-border-radius: 15px;
-     -khtml-box-shadow: inset 0px 0px 0px 2px #99f;
-}
-
-div.logo hr {
-     color: #ddf;
-     background: #ddf;
-     height: 5px;
-     border: 0px solid #ddf;
-     margin: 8px -3px;
-}
-
-div.logo a:link, div.logo a:visited {
-     text-shadow: 1px 1px 1px rgba(0, 0, 32, 0.5);
-}
-
-div.logo a:active {
-     text-shadow: 1px 1px 1px rgba(255, 96, 0, 0.7);
-     color: #f60;
-}
-
-div.logo a:hover {
-     text-shadow: 1px 1px 1px rgba(128, 0, 0, 0.7);
-     color: #900;
-}
-
-div.warning {
-     margin: 20px 20px 10px 260px;
-     padding: 0px 20px 20px 75px;
-     background: #ffd;
-     border: 5px solid #fb7;
-     text-align: left;
-     color: inherit;
-     background-image:url("../images/itoopie_sm.png");     
-     background-position: 12px center;
-     background-repeat:no-repeat;
-     -moz-border-radius: 15px;
-     -moz-box-shadow: inset 0px 0px 0px 2px #f60;
-     -kthml-border-radius: 15px;
-     -khtml-box-shadow: inset 0px 0px 0px 2px #f60;
-}
-
-div.warning a:link {
-     color: #f60;
-     text-shadow: 1px 1px 1px rgba(255, 96, 0, 0.5);
-}
-
-div.warning a:visited{
-     color: #f90;
-}
-
-div.warning a:hover{
-     color: #d30;
-  text-shadow: 1px 1px 1px rgba(255, 96, 0, 0.7);
-}
-
-div.warning a:active{
-     color: #900;
-}
-
-div.warning hr {
-     color: #fb7;
-     background: #fb7;
-     height: 5px;
-     border: 0px solid #fb7;
-     margin: 5px 0;
-}
-
-/* console error messages */
-
-div.sorry {
-     padding: 20px;
-     background: #ddf;
-     margin: -2px 1px 0 195px;
-     border: 5px solid #bbf;
-     text-align: justify;
-     -moz-box-shadow: inset 0px 0px 0px 1px #d00;
-     word-wrap: break-word;
-     font-weight: bold;
-     color: #001;
-}
-
-div.sorry hr {
-     color: #001;
-     background: #001;
-     height: 1px;
-     border: 1px solid #001;
-     margin: 10px 0;
-}
-
-div.toolbar {
-     margin: 0em 0em 2em 0em;
-     font-weight: bold;
-     display: none !important;
-}
+/* sidepanel */
 
 div.routersummaryouter {
      float: left; 
@@ -169,10 +40,10 @@ div.routersummary hr {
 
 div.routersummary h3 {
      border: 0px solid #f00;
-     font-size: 12pt;
+     font-size: 11pt;
      letter-spacing: 0.05em;
      margin: -7px 1px -7px 1px;
-     padding: 1px 0;
+     padding: 4px 0;
      background: #c5d5fb;
      text-transform: uppercase;
 }
@@ -183,7 +54,7 @@ div.routersummary h4 {
      font-size: 10pt;
      letter-spacing: 0.05em;
      margin: -7px 1px -7px 1px !important;
-     padding: 1px 3px;
+     padding: 2px 3px;
      background: #c1d1f7;
      text-transform: capitalize;
      text-decoration: none !important;
@@ -233,11 +104,11 @@ div.routersummary p {
 }     
 
 div.routersummary a:link, div.routersummary a:visited {
-     text-shadow: 1px 1px 1px rgba(0, 0, 32, 0.3);
+     text-shadow: 0px 0px 1px rgba(0, 0, 32, 0.3);
 }
 
 div.routersummary a:hover {
-     text-shadow: 1px 1px 1px rgba(255, 96, 0, 0.7);
+     text-shadow: 0px 0px 1px rgba(255, 96, 0, 0.7);
      color: #f60;
 }
 
@@ -247,534 +118,4 @@ div.routersummary td {
      border: 0 !important;
 }
 
-div.warning h3 {
-     border-bottom: 5px solid #fb7;
-     padding-bottom: 10px;
-}
 
-div.main {
-     margin: 0px 0px 0px 195px;
-     padding: 15px 15px 10px 15px;
-     background: #eef;
-     border: 5px solid #bbf;
-     border-top: 0;
-     text-align: left;
-     color: #001;
-     min-width: 570px;
-     -moz-box-shadow: inset 0px 0px 0px 1px #99f;
-}
-
-div.main ul {
-     margin: -10px 0 -10px -10px;
-}
-
-div.main li {
-     padding: 0 0 5px 0;
-     list-style: square;
-     word-wrap: break-word;
-     margin-right: 20px;
-}
-
-div.main li:first-child {
-     padding-top: 15px;
-}
-
-div.main hr:last-child {
-     margin: 15px 0 10px 0;
-}
-
-div.main textarea {
-     width: 98% !important; 
-     margin: 2px 0 2px 5px;
-     min-height: 96px;
-}
-
-div.main h2 {
-     margin-top: 20px;
-     margin-bottom: -5px;
-}
-
-div.welcome {
-     margin-top: 5px;
-}
-
-div.main h2:first-child, div.main h3:first-child {
-     margin-top: 0px; 
-     margin-bottom: -5px;
-}
-
-div.wideload h2 {
-     margin-bottom: 0px !important;
-}
-
-div.wideload h3:first-child {
-     margin-top: 0 !important;
-}
-
-div.wideload h3 {
-     margin-top: 15px !important;      
-     margin-bottom: 0px !important;
-}
-
-div.wideload p !important {
-     margin-top: 5px;
-}
-
-div.news {
-     margin: -5px 0px 0 195px;
-     padding: -10px 0px 8px 0px;
-     background: #ffffc0;
-     border: 5px solid #bbf;
-     text-align: right;
-     color: #770;
-     min-width: 600px;
-     padding-bottom: 8px;
-     padding-left: 10px;
-     padding-right: 10px;
-     -moz-box-shadow: inset 0px 0px 0px 1px #99f;
-     font-size: 7pt;
-}
-
-/* convert the list entry to our title */
-
-div.news li {
-     text-align: justify;
-     list-style: none;
-     margin: 15px 15px -10px -20px;
-     padding: 0px 0 15px 0;
-     border-bottom: 2px dotted #cc7;
-     border-top: 0px solid #cc7;     
-     padding: 3px 5px 5px 0;
-     font-size: 10pt;
-     color: #540;
-}
-
-div.news p {
-     color: #330;
-     font-size: 9pt;
-     margin-bottom: -10px;
-}
-/*
-div.news p:first-child {
-     padding-top: 15px !important;
-}
-
- 
-div.news p:nth-child(2n) {
-     padding-top: 15px !important;
-}
-*/
-div.news p:last-child {
-     margin-bottom: 10px;
-}
-
-div.news a:link {
-     color: #663;
-     text-shadow: 1px 1px 1px rgba(128, 128, 48, 0.3);
-}
-
-div.news a:visited {
-     color: #773 !important;
-     text-shadow: 1px 1px 1px rgba(128, 128, 48, 0.3);
-}
-
-div.news hr {
-     color: #cc7;
-     background: #cc7;
-     height: 1px;
-     border: 0px solid #cccc77;
-     margin: 2px 0 0 0;
-}
-
-div.confignav {
-     padding: 12px 0 15px 0;
-     background: #cfc;
-     margin: -20px -20px 0 -20px;
-     border: 5px solid #bbf;
-     -moz-box-shadow: inset 0px 0px 0px 1px #99f;
-}
-
-div.configure {
-     margin: 1px -20px 0 -20px;
-     padding: 0px 20px 0px 20px;
-}
-
-div.configure hr {
-     margin: 15px 0;
-}
-
-div.configure table {
-     font-size: 9pt;
-     font-weight: bold;
-     border: 1px solid #bbf;
-}
-
-div.configure tr, div.configure td {
-     padding: 10px 2px;
-}
-
-div.configure tr {
-     -moz-box-shadow: inset 0px 0px 1px 0px #bbf;
-}
-
-div.configure li:first-child, div.main li:first-child {
-     margin-top: -10px;
-}
-
-div.configure li:last-child {
-     margin-bottom: -5px;
-}
-
-div.configure h2:first-child {
-     margin-top: 15px;
-}
-
-.topshimten {
-     margin-top: 15px;
-     margin-bottom: 15px;
-} 
-
-div.messages {
-     padding: 0px 10px;
-     background: #fff;
-     border: 5px solid #bbf;
-     border-right: 0;
-     margin: -5px -15px 10px -20px;
-     text-align: center;
-     font-size: 9pt;
-     font-weight: bold;
-     color: #474;
-     -moz-box-shadow: inset 0px 0px 0px 1px #99f;
-}
-
-div.messages li, div.messages ul {
-     padding: 10px 0 0 5px;
-     margin: -10px 0 0 0;
-}
-
-div.messages span.error {
-     color: #d00000;
-}
-
-div.messages span.notice {
-     font-style: italic;
-}
-
-h1 {
-     font-size: 18pt;
-     text-shadow: 1px 1px 1px rgba(0, 0, 32, 0.7);
-     text-align: center;
-     border: 5px solid #bbf;
-     padding: 13px 10px 12px 10px;
-     margin: 0 0px 0 195px;
-     line-height: 93%;
-     text-transform: uppercase;
-     letter-spacing: 0.3em;
-     background: #fff;
-     min-width: 600px;
-     -moz-box-shadow: inset 0px 0px 0px 1px #99f;
-}
-
-h2 {
-     font-size: 14pt;
-     padding: 0px 10px 10px 10px;
-     border-bottom: 3px solid #aaf;
-     border-top: 0px solid #aaf;
-     letter-spacing: 0.04em;
-}
-
-h3 {
-     font-size: 12pt;
-     font-family:ºÚÌå;
-     padding: 0 10px 10px 10px;
-     border-bottom: 3px solid #aaf;
-     border-top: 0px solid #aaf;
-     letter-spacing: 0.04em;
-     margin-bottom: 10px;
-}
-
-.proxyfooter{
-     font-size: 7pt;
-     display: none !important;
-}
-
-table {
-     border-collapse: collapse; 
-     border: 1px solid #bbf;
-     margin: 0 0 5px 0;
-     cell-padding: 1px;
-     font-size: 7.5pt;
-     background: #fff;
-     width: 100%;
-}
-
-table hr {
-     padding: 0px 0;
-     color: #bbf;
-     background: #bbf;
-     border: 0px solid #bbf;
-     margin: 0px -5px;
-     height: 1px;
-}
-
-table tt {
-     font-size: 7.5pt;
-}
-
-th {
-     background-color: #fff;
-     padding: 8px 2px;
-     text-align: center;
-     border-bottom: 1px solid #bbf;
-}
-
-tt {
-     font-size: 8pt;
-}
-
-tt, pre {
-     font: 8pt "Lucida Console", "DejaVu Sans Mono", Courier, mono;
-}
-     
-td {
-     padding: 4px;
-}
-
-tr:nth-child(even) {
-     background-color: #eef;
-}
-
-tr:nth-child(odd) {
-     background-color: #ddf;
-}
-
-hr {
-     color: #aaf;
-     background: #aaf;
-     height: 3px;
-     border: 0px solid #aaf;
-     margin: 3px 0;
-}
-
-.statusnotes {
-     font-style: italic;
-     font-size: 8pt;
-     color: #001;
-     text-align: center;
-     margin: -7px 0 7px 0; 
-     background: #bbf;
-     border: 5px solid #bbf;
-     border-top: 0;
-     padding: 4px 0 2px 0;
-}
-
-div.joblog {
-     margin: 10px 0;
-     line-height: 130% !important;
-}
-
-div.joblog:li {
-     word-wrap: break-word !important;
-     text-align: justify !important;
-     line-height: 80% !important;
-}
-
-div.joblog:ul {
-     word-wrap: break-word !important;
-     text-align: justify;
-}
-
-div.joblog li:first-child {
-     margin-top: -10px;
-}
-
-div.joblog li:last-child {
-     margin-bottom: -10px;
-}
-
-div.joblog form:first-child {
-     margin-top: 10px;
-}
-
-div.joblog table {
-     margin-top: 15px;
-}
-
-div.joblog p {
-     line-height: 130%;
-}
-
-div.joblog h3 {
-     margin: 10px 0 10px 0;
-}
-
-div.joblog h3:first-child {
-     margin: 5px 0 15px 0;
-}
-
-div.joblog hr {
-     margin: 15px 0 15px;
-}
-
-div.joblog ol {
-     margin-bottom: 0px;
-}
- 
-input {
-     margin: 3px 5px 3px 0;
-     vertical-align: middle;
-}
-
-input[type=text] {
-     margin: 3px 5px 3px 5px;
-     vertical-align: middle;
-}
-select {
-     margin: 3px 5px 3px 5px;
-     vertical-align: middle;
-}
-
-submit {
-     margin: 3px 5px 3px 5px;
-     padding: 2px 0;
-     font: 8pt/140% "Lucida Sans Unicode", "Bitstream Vera Sans", Verdana, Tahoma, Helvetica, sans-serif;
-}
-
-table td b{
-      font-weight:normal;
-}
-
-p {
-     padding: 5px 20px 0px 20px;
-     text-align: justify;
-}
-
-.formaction {
-     text-align: right;
-     margin: -10px -5px;
-}
-
-.langbox {
-     margin: 10px -20px 0px 5px;
-     color: #001;
-     font-size: 7pt;
-     width: 220px;
-     text-align: center;
-     float: right;
-     valign: middle;
-}
-
-.langbox img {
-     padding: 0 2px; /* Ignored by IE8 */
-}
-
-.links {
-     padding-bottom: -2px;
-     text-align: justify;
-     margin-top: 5px !important;
-}
-
-.links li {
-     list-style-image: url("../images/link.png") !important;
-}
-
-a{
-     white-space:nowrap; 
-}
-
-a:link{
-     color: #006;
-     text-decoration: none;
-}
-
-a:visited{
-     color: #448;
-     text-decoration: none;
-}
-
-a:hover{
-     color: #f60;
-     text-decoration: underline;
-}
-
-a:active{
-     color: #f93;
-     text-decoration: underline;
-     font-weight: bold;
-}
-
-pre {
-     font-size: 9pt;
-     margin: 0px 20px;
-}
-
-tt {
-     font-size: 9pt;
-     font-weight: bold;
-     color: darkgreen;
-}
-
-.tablefooter {
-     border: 1px solid #bbf;
-}
-
-.tablefooter tr, .tablefooter td {
-     background: #bbf;
-     font-size: 8pt;
-     font-weight: bold;
-     line-height: 150%;
-     word-wrap: nowrap;
-     padding: 8px 1px;
-     border-top: 2px solid #bbf;
-}
-
-.tidylist {
-     text-align: justify;
-     padding-right: 30px;
-     margin-right: 20px;
-}
-
-div.graphspanel {
-     padding: 15px 5px 20px 5px;
-     margin: -20px;
-     background: #ddf url('images/lightbluetile.png');
-     -moz-border-radius: 4px;
-     -khtml-border-radius: 4px;
-     border-radius: 4px;
-     border: 5px solid #bbf;
-     -moz-box-shadow: inset 0px 0px 1px 0px #002;
-     text-align: center !important;   
-}
-
-div.graphspanel img {
-     border: 1px solid #77f;
-     padding: 2px;
-     margin: 6px;
-     background: #ccf;
-     -moz-box-shadow: inset 0px 0px 0px 0px #002;
-     opacity: 0.9;
-}
-
-div.graphspanel img:hover {
-     border: 1px solid #003;
-     padding: 2px;
-     margin: 6px;
-     text-align: center !important;
-     background: #001;
-     -moz-box-shadow: inset 0px 0px 2px 1px #f60;
-     opacity: 1;
-}
-
-div.graphspanel hr {
-     margin: 10px 0;
-}
-
-div.graphspanel form:last-child {
-     text-align: left;
-     margin: 0 20px;
-}
-
-div.graphspanel h3 {
-     text-align: left;
-     margin: 10px 20px 10px 20px;
-}
