Tweak to classic theme, somewhere.
Monotone-Parent: 2a20080b4973a51b7e469178141886b6f255583e
Monotone-Revision: 5aee09556991fafc7b849a15f8923c3422751885

Monotone-Author: z3d@mail.i2p
Monotone-Date: 2009-10-27T19:39:45
Monotone-Branch: i2p.i2p

--- a/installer/resources/themes/console/classic/console.css
+++ b/installer/resources/themes/console/classic/console.css
@@ -347,6 +347,7 @@ div.news li {
      padding: 3px 5px 5px 0;
      font-size: 10pt;
      color: #540;
+     text-transform: capitalize;
 }
 
 div.news p {
