--- a/installer/resources/themes/console/classic/console_big.css
+++ b/installer/resources/themes/console/classic/console_big.css
@@ -19,9 +19,9 @@ div.routersummary {
      padding: 10px 1px 7px 1px;
      text-align: center !important;
      border: 5px solid #bbf;
-     font-size: 9pt;
+     font-size: 9.5pt;
      word-wrap: break-word;
-     font: 9pt/125%;
+     font: 9.5pt/125%;
      -moz-box-shadow: inset 0px 0px 0px 1px #99f;
 }
 
@@ -40,7 +40,7 @@ div.routersummary hr {
 
 div.routersummary h3 {
      border: 0px solid #f00;
-     font-size: 11pt;
+     font-size: 12.5pt;
      letter-spacing: 0.05em;
      margin: -7px 1px -7px 1px;
      padding: 4px 0;
@@ -51,10 +51,10 @@ div.routersummary h3 {
 div.routersummary h4 {
      border: 0px solid #f00;
      border-bottom: 0 !important;
-     font-size: 10pt;
+     font-size: 11.5pt;
      letter-spacing: 0.05em;
      margin: -7px 1px -7px 1px !important;
-     padding: 2px 3px;
+     padding: 2px 3px 5px 3px;
      background: #c1d1f7;
      text-transform: capitalize;
      text-decoration: none !important;
@@ -67,11 +67,15 @@ div.routersummary table {
      margin: -5px 4px -5px 3px;
      width: 180px !important;
      overflow: hidden;
-     font-size: 9pt;
+     font-size: 8.5pt;
      padding: 0 -10px;
      background-image: none !important;
      background-color: transparent !important;
 }
+
+div.routersummary table a:link {
+     font-size: 10.5pt;
+}     
 
 div.routersummary tr {
      background-image: none !important;
@@ -104,7 +108,7 @@ div.routersummary p {
 }     
 
 div.routersummary a:link, div.routersummary a:visited {
-     text-shadow: 0px 0px 1px rgba(0, 0, 32, 0.3);
+     text-shadow: 0px 0px 1px rgba(0, 0, 32, 0.2);
 }
 
 div.routersummary a:hover {
