Minor tweaks to console_big.css in classic & midnight following feedback from "walking".
Monotone-Parent: 75fdcc7e800cead8cbbdd0c982b1c6b113ba1ff2
Monotone-Revision: a831cd0f05f3dcf5d877ff68b14fef2497cde44a

Monotone-Author: z3d@mail.i2p
Monotone-Date: 2009-11-10T14:16:54
Monotone-Branch: i2p.i2p

--- a/installer/resources/themes/console/classic/console_big.css
+++ b/installer/resources/themes/console/classic/console_big.css
@@ -1,5 +1,5 @@
 /* I2P Theme: I2P Classic Theme Override */
-/* I2P Description: Larger fontsize override for console to accomodate foreign charactersets */
+/* Description: Larger fontsize override for console to accomodate foreign charactersets */
 /* Author: Dr|Z3d */
 
 
@@ -29,7 +29,7 @@ div.routersummary table a:link, div.routersummary table a:visited {
 }
 
 div.tunnels a {
-     font-size: 8pt !important;
+     font-size: 9pt !important;
 }
 
 div.tunnels table {
